Fixed footer overlapping with content

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ html, body {
   text-align:center;
   padding:0.5px;
   margin-top: 60px;
+  clear: both;
 }
 
 .nav{
